--- a/themes/bootstrap3/templates/RecordTab/holdingsils/electronic.phtml
+++ b/themes/bootstrap3/templates/RecordTab/holdingsils/electronic.phtml
@@ -11,16 +11,17 @@
         <?php endif; ?>
       </td>
       <td class="fullAvailability">
-        <?php if ($item['use_unknown_message'] ?? false): ?>
+        <?php
+          $availabilityStatus = $item['availability'];
+        ?>
+        <?php if ($availabilityStatus->useUnknownMessage()): ?>
           <span><?=$this->transEsc('status_unknown_message')?></span>
-        <?php elseif ((int)$item['availability'] === \VuFind\ILS\Logic\ItemStatus::STATUS_UNAVAILABLE): ?>
-          <span class="text-danger"><?=$this->transEsc($item['status'])?></span>
-        <?php elseif ((int)$item['availability'] === \VuFind\ILS\Logic\ItemStatus::STATUS_UNCERTAIN): ?>
-          <span class="text-warning"><?=$this->transEsc($item['status'])?></span>
         <?php else: ?>
-          <span class="text-success">
-            <?=!empty($item['status']) ? $this->transEsc($item['status']) : $this->transEsc('Available')?>
-          </span>
+          <?php
+            $statusClassEsc = 'text-' . $availabilityStatus->getStatusClass();
+            $statusDescription = $availabilityStatus->getStatusDescription();
+          ?>
+          <span class="<?=$statusClassEsc?>"><?=$this->transEsc($statusDescription)?></span>
         <?php endif; ?>
         <?php if (isset($item['item_notes'])): ?>
           <div class="item-notes">
