--- a/themes/bootstrap3/templates/RecordTab/holdingsils/standard.phtml
+++ b/themes/bootstrap3/templates/RecordTab/holdingsils/standard.phtml
@@ -3,6 +3,7 @@
     $check = $holding['check'] ?? false;
     $checkStorageRetrievalRequest = $holding['checkStorageRetrievalRequest'] ?? false;
     $checkILLRequest = $holding['checkILLRequest'] ?? false;
+    $availabilityStatus = $holding['availability'];
   ?>
   <tr vocab="http://schema.org/" typeof="Offer">
     <th class="copy-number"><?=$this->transEsc('Copy')?> <?=$this->escapeHtml($holding['number'])?>
@@ -15,23 +16,17 @@
         <link property="availability" href="http://schema.org/InStoreOnly">
         <?=$this->transEsc('On Reserve - Ask at Circulation Desk')?><br>
       <?php endif; ?>
-      <?php if ($holding['use_unknown_message'] ?? false): ?>
+      <?php if ($availabilityStatus->useUnknownMessage()): ?>
         <span class="text-muted"><?=$this->transEsc('status_unknown_message')?></span>
       <?php else: ?>
-        <?php if ($holding['availability'] ?? false): ?>
+        <?php
+          $statusClassEsc = 'text-' . $availabilityStatus->getStatusClass();
+          $statusDescription = $availabilityStatus->getStatusDescription();
+          $schemaAvailEsc = $availabilityStatus->getSchema();
+        ?>
+        <span class="<?=$statusClassEsc?>"><?=$this->transEsc($statusDescription)?><link property="availability" <?=$schemaAvailEsc ? 'href="' . $schemaAvailEsc . '"' : ''?>></span>
+        <?php if ($availabilityStatus->isAvailable()): ?>
           <?php /* Begin Available Items (Holds) */ ?>
-            <?php
-              if ((int)$holding['availability'] === \VuFind\ILS\Logic\ItemStatus::STATUS_UNCERTAIN) {
-                $statusClassEsc = 'text-warning';
-                $status = $holding['status'];
-                $schemaAvailEsc = 'http://schema.org/LimitedAvailability';
-              } else {
-                $statusClassEsc = 'text-success';
-                $status = is_int($holding['availability']) && !empty($holding['status']) ? $holding['status'] : 'Available';
-                $schemaAvailEsc = 'http://schema.org/InStock';
-              }
-            ?>
-            <span class="<?=$statusClassEsc?>"><?=$this->transEsc($status)?><link property="availability" href="<?=$schemaAvailEsc?>"></span>
           <?php if ($holding['link'] ?? false): ?>
             <a class="<?=$check ? 'checkRequest request-check ' : ''?>placehold icon-link" <?php if (!empty($holding['linkLightbox'])): ?>data-lightbox <?php endif; ?>href="<?=$this->escapeHtmlAttr($this->recordLinker()->getRequestUrl($holding['link']))?>">
               <?=$this->icon('place-hold', 'icon-link__icon') ?>
@@ -52,7 +47,6 @@
           <?php endif; ?>
         <?php else: ?>
           <?php /* Begin Unavailable Items (Recalls) */ ?>
-          <span class="text-danger"><?=$this->transEsc($holding['status'])?><link property="availability" href="http://schema.org/OutOfStock"></span>
           <?php if ($holding['returnDate'] ?? false): ?>&ndash; <span class="small"><?=$this->escapeHtml($holding['returnDate'])?></span><?php endif; ?>
           <?php if ($holding['duedate'] ?? false): ?>
             &ndash; <span class="small"><?=$this->transEsc('Due')?>: <?=$this->escapeHtml($holding['duedate'])?></span>
