--- a/themes/bootstrap3/templates/ajax/status-full.phtml
+++ b/themes/bootstrap3/templates/ajax/status-full.phtml
@@ -30,25 +30,19 @@
         <?php endif; ?>
       </td>
       <td class="fullAvailability">
-        <?php if ($item['use_unknown_message'] ?? false): ?>
+        <?php $availabilityStatus = $item['availability']; ?>
+        <?php if ($availabilityStatus->useUnknownMessage()): ?>
           <span class="text-muted"><?=$this->transEsc('status_unknown_message')?></span>
-        <?php elseif ((int)$item['availability'] === \VuFind\ILS\Logic\ItemStatus::STATUS_UNAVAILABLE): ?>
-          <span class="text-danger"><?=$this->transEsc($item['status'])?></span>
-        <?php elseif ((int)$item['availability'] === \VuFind\ILS\Logic\ItemStatus::STATUS_UNCERTAIN): ?>
-          <span class="text-warning"><?=$this->transEsc($item['status'])?></span>
         <?php else: ?>
-          <span class="text-success">
-            <?php
-              if ($item['reserve'] === 'Y') {
-                $status = 'On Reserve';
-              } elseif (is_int($item['availability']) && !empty($item['status'])) {
-                $status = $item['status'];
-              } else {
-                $status = 'Available';
-              }
-            ?>
-            <?=$this->transEsc($status)?>
-          </span>
+          <?php
+            $statusClassEsc = 'text-' . $availabilityStatus->getStatusClass();
+            if ($availabilityStatus->isAvailable() && $item['reserve'] === 'Y') {
+              $statusDescription = 'On Reserve';
+            } else {
+              $statusDescription = $availabilityStatus->getStatusDescription();
+            }
+          ?>
+          <span class="<?=$statusClassEsc?>"><?=$this->transEsc($statusDescription)?></span>
         <?php endif; ?>
       </td>
     </tr>
