--- a/themes/bootstrap3/templates/admin/menu.phtml
+++ b/themes/bootstrap3/templates/admin/menu.phtml
@@ -5,5 +5,7 @@
   <a href="<?=$this->url('admin/maintenance')?>" class="list-group-item<?=strtolower($this->layout()->templateName) == 'maintenance' ? ' active' : ''?>"><?=$this->transEsc('System Maintenance')?></a>
   <a href="<?=$this->url('admin/tags')?>" class="list-group-item<?=strtolower($this->layout()->templateName) == 'tags' ? ' active' : ''?>"><?=$this->transEsc('Tag Maintenance')?></a>
   <a href="<?=$this->url('admin/feedback')?>" class="list-group-item<?=strtolower($this->layout()->templateName) == 'feedback' ? ' active' : ''?>"><?=$this->transEsc('Feedback Management')?></a>
-  <a href="<?=$this->url('admin/overdrive')?>" class="list-group-item<?=strtolower($this->layout()->templateName) == 'overdrive' ? ' active' : ''?>"><?=$this->transEsc('od_admin_menu')?></a>
+  <?php if ($this->overdrive()->showOverdriveAdminLink()):?>
+    <a href="<?=$this->url('admin/overdrive')?>" class="list-group-item<?=strtolower($this->layout()->templateName) == 'overdrive' ? ' active' : ''?>"><?=$this->transEsc('od_admin_menu')?></a>
+  <?php endif; ?>
 </nav>
