--- a/themes/bootstrap3/templates/admin/overdrive/home.phtml
+++ b/themes/bootstrap3/templates/admin/overdrive/home.phtml
@@ -26,10 +26,7 @@
         <li class="list-group-item"> <?php echo '<strong>Library ID:</strong> ' . $this->overdriveConfig->libraryID;?></li>
         <li class="list-group-item"> <?php echo '<strong>Website ID:</strong> ' . $this->overdriveConfig->websiteID;?></li>
         <li class="list-group-item"> <?php echo '<strong>ILS Name:</strong> ' . $this->overdriveConfig->ILSname;?></li>
-        <li class="list-group-item"> <?php
-          echo '<strong>Records in Marc Format: </strong>';
-          echo $this->overdriveConfig->isMarc ? 'Yes' : 'No';
-        ?></li>
+        <li class="list-group-item"> <?php echo '<strong>Records in Marc Format: </strong>' . ($this->overdriveConfig->isMarc ? 'Yes' : 'No'); ?></li>
     </ul>
 
     <h2><?=$this->transEsc('User Access')?></h2>
