--- a/themes/bootstrap3/templates/record/comments-list.phtml
+++ b/themes/bootstrap3/templates/record/comments-list.phtml
@@ -1,12 +1,11 @@
 <?php $comments = $this->driver->getComments(); ?>
-<?php if (empty($comments) || count($comments) == 0): ?>
+<?php if (empty($comments)): ?>
   <div class="alert alert-info"><?=$this->transEsc('Be the first to leave a comment')?>!</div>
 <?php else: ?>
-  <?php foreach ($comments as $commentRow): ?>
-    <?php [0 => $comment, 'firstname' => $firstname, 'lastname' => $lastname] = $commentRow; ?>
+  <?php foreach ($comments as $comment): ?>
     <div class="comment">
       <div class="comment-name">
-        <strong><?=null === $comment->getUser()->getId() ? $this->transEsc('comment_anonymous_user') : $this->escapeHtml(trim($firstname . ' ' . $lastname))?></strong><br>
+        <strong><?=null === $comment->getUser()->getId() ? $this->transEsc('comment_anonymous_user') : $this->escapeHtml(trim($comment->getUser()->getFirstName() . ' ' . $comment->getUser()->getLastName()))?></strong><br>
         <small>
           <?=$this->escapeHtml($comment->getCreated()->format('Y-m-d H:i:s'))?>
           <?php if (($user = $this->auth()->getUserObject()) && $comment->getUser()->getId() == $user->id): ?>
