Fix navbar active item color.

--- a/themes/bootstrap5/scss/bootstrap-variable-overrides.scss
+++ b/themes/bootstrap5/scss/bootstrap-variable-overrides.scss
@@ -25,6 +25,7 @@ $breadcrumb-padding-x:              15px !default;
 $nav-link-padding-y:                1rem !default;
 $navbar-nav-link-padding-x:         1rem !default;
 $navbar-light-color:                $primary !default;
+$navbar-light-active-color:         #fff !default;
 
 $navbar-padding-x:                  15px !default;
 $navbar-padding-y:                  0 !default;
