--- a/themes/bootstrap3/templates/ajax/status.phtml
+++ b/themes/bootstrap3/templates/ajax/status.phtml
@@ -1,1 +1,1 @@
-<span class="label label-<?=$availabilityStatus->getStatusClass()?>"><?=$this->transEsc($availabilityStatus->getStatusLabel())?></span>
+<?=$this->availabilityStatus()->renderAjax($this->availabilityStatus);
